[project]
name = "watchgha"
description = "Watch GitHub action runs"

readme = "README.rst"

authors = [
    {name = "Ned Batchelder", email = "ned@nedbatchelder.com"},
]

license.text = "Apache-2.0"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

requires-python = ">= 3.11"

dependencies = [
    "requests",
    "rich",
]

dynamic = ["version"]

[project.urls]
"Source code" = "https://github.com/nedbat/watchgha"
"Issue tracker" = "https://github.com/nedbat/watchgha/issues"

[project.scripts]
watch_gha_runs = "watchgha.watch_runs:main"

[tool.setuptools.dynamic]
version.attr = "watchgha.__version__"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
