[project]
name = "watchgha"
description = "Watch GitHub action runs"

readme = "README.rst"

authors = [
    {name = "Ned Batchelder", email = "ned@nedbatchelder.com"},
]

license.text = "Apache-2.0"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

requires-python = ">= 3.7"

dependencies = [
    "click",
    "dulwich",
    "exceptiongroup",
    "httpx>=0.24.0",    # 0.24.0 added NetRCAuth()
    "rich",
    "trio",
]

dynamic = ["version"]

[project.urls]
"Source code" = "https://github.com/nedbat/watchgha"
"Issue tracker" = "https://github.com/nedbat/watchgha/issues"
"Mastodon" = "https://hachyderm.io/@nedbat"
"Funding" = "https://github.com/sponsors/nedbat"

[project.scripts]
watch_gha_runs = "watchgha.watch_runs:main"

[tool.setuptools.dynamic]
version.attr = "watchgha.__version__"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.scriv]
# Changelog management: https://pypi.org/project/scriv/
format = "rst"
output_file = "README.rst"
insert_marker = "scriv-start-here"
end_marker = "scriv-end-here"
